plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.2'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.studentbox'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.jayway.jsonpath:json-path:2.7.0'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'org.flywaydb:flyway-sqlserver'

    implementation (group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'){
        exclude group:'io.springfox.springfox-swagger2.swagger-models'
    }
    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
    implementation group: 'io.swagger', name: 'swagger-models', version: '1.5.21'
    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'


    implementation group: 'com.auth0', name: 'java-jwt', version: '4.0.0'

    implementation group: 'org.json', name: 'json', version: '20220320'

    implementation group: 'com.sendgrid', name: 'sendgrid-java', version: '4.9.3'
}

tasks.named('test') {
    useJUnitPlatform()
}
